# GoogleTest-Cpp-CMake-Template

./: CMakeLists.txt  readme.md  run.bat
function/: TestFunction.cpp  TestFunction.h
test/: CMakeLists.txt  gcheck.cpp  gtest.cpp
